# iris-e

./: .gitignore  CMakeLists.txt  README.md
include/iris/: iris_runtime.h
src/runtime/: CMakeLists.txt  Platform.cpp  Platform.h  Policies.cpp  Policies.h  PolicyClient.cpp  PolicyClient.hpp  SchedulingHistory.cpp  SchedulingHistory.h
src/runtime/IRISE/: Client.cpp  Client.hpp  CommandProfile.cpp  CommandProfile.hpp  DeviceModels.cpp  DeviceModels.hpp  Devices.cpp  Devices.hpp  Message.hpp  MessageQueue.cpp  MessageQueue.hpp  Messages.cpp  Messages.hpp  Policies.cpp  Policies.hpp  Profiler.cpp  Profiler.hpp  Scheduler.cpp  Scheduler.hpp  Server.cpp  Server.hpp
src/runtime/IRISE/Client/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
tests/10_multikernelexecution/: CMakeLists.txt  test10_multikernelexecution.c
